# sampo-app

./: .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/pages/: index.vue  walk.vue
app/plugins/: audio.client.ts
components/: CanvasMapView.vue  MapView.vue
composables/: useAudioEngine.ts  useAudioOrchestrator.ts  usePlayer.ts  useSampoCore.ts
docs/: audio-core-spec.md  audio-implementation-plan.md  refactoring-plan.md
pages/: walk.vue
plugins/: audio.client.ts  maplibre.client.ts
public/audio/: audio-engine.worklet.js
public/routes/: README.md  level.geojson
rust/sampo_core/: Cargo.toml
rust/sampo_core/src/: audio.rs  audio_ffi.rs  audio_wasm.rs  game.rs  lib.rs
server/api/routes/: [id].get.ts
