[package]
name = "sampo_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geojson = "0.24"
geo = { version = "0.28", features = ["use-serde"] }

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

